# LLM-Note-Organizer

./: .env.example  .gitignore  README.md  WORKFLOW.md  analyze_notes.py  batch_operations.py  category_schema.yaml  compare_classifiers.py  config.yaml  drafts_to_obsidian.py  note_linter.py  note_organizer.py  process_notes.py  pyproject.toml  requirements.txt  setup.py
drafts_actions/: README.md  export_to_obsidian.js  note_organizer_refine.js  note_organizer_split.js  note_organizer_tag.js
note_organizer/: __init__.py  __main__.py
note_organizer/api/: __init__.py  drafts.py  models.py  server.py
note_organizer/cli/: main.py  nushell.py
note_organizer/core/: config.py
note_organizer/db/: database.py  models.py
note_organizer/services/: __init__.py  drafts_integration.py  embedding.py  processor.py  search.py  service_factory.py  tagging.py
