[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "note_organizer"
version = "0.1.0"
description = "AI-powered note organization microservice"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Malachi Mabie", email = "malachi@outlook.com"}
]
# Updated dependencies with relaxed constraints
dependencies = [
    # Sentence Transformers: Allow minor/patch updates up to v3.
    "sentence-transformers>=2.2.2,<3.0.0",
    # OpenAI: v1 API. Allow minor/patch updates within v1.
    "openai>=1.6.0,<2.0.0",
    # Generally stable utilities: Allow minor/patch updates.
    "python-dotenv>=1.0.0,<2.0.0",
    "markdown>=3.4.3,<4.0.0",
    "nltk>=3.8.1,<4.0.0",
    "tqdm>=4.66.1,<5.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    # Scientific stack: Allow patch updates.
    "numpy~=1.24.3",
    "scikit-learn~=1.3.0",
    # Web framework: Allow patches/minors up to v1.
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn>=0.23.2,<1.0.0",
    # Pydantic: CRITICAL FIX - Must be >=2.5.0 for dspy-ai. Allow future Pydantic v2 releases.
    "pydantic>=2.5.0,<3.0.0",
    # Watchfiles: Generally stable.
    "watchfiles>=0.21.0,<1.0.0",
    # DSPy: Pin minor version (~=2.3.5 means >=2.3.5, ==2.3.*).
    "dspy-ai~=2.3.5",
    # SQLModel: Needs compatibility with Pydantic v2 (use 0.0.14+).
    "sqlmodel>=0.0.14,<0.1.0",
    # Logging: Stable.
    "loguru>=0.7.2,<1.0.0",
    # Plotting: Allow minor/patch updates.
    "matplotlib>=3.7.3,<3.9.0",
    "wordcloud>=1.9.2,<2.0.0",
    # CCE: use local fork
    # "cce @ git+https://github.com/thomasahle/cce.git",
    # Torch: Keep >= but be mindful of 1.x vs 2.x major versions.
    "torch>=1.1", # using 2.6
    "httpx>=0.23.0,<1.0.0",
    "fastapi",
    "pydantic",
    "loguru",
    "anthropic",
    "google.generativeai",
]

# Updated optional dependencies with relaxed constraints
[project.optional-dependencies]
dev = [
    "black>=23.10.0,<26.0.0",
    "isort>=5.12.0,<6.0.0",
    "mypy>=1.6.1,<2.0.0",
    "pytest>=7.4.2,<9.0.0",
    "pytest-cov>=4.1.0,<6.0.0",
]
dashboard = [
    "streamlit>=1.20.0,<2.0.0",
    "plotly>=5.10.0,<6.0.0",
]

[project.scripts]
note-organizer = "note_organizer.cli.main:main"
note-organizer-api = "note_organizer.api.server:start"
note-organizer-dashboard = "note_organizer.dashboard.app:main [dashboard]"

[tool.setuptools]
packages = ["note_organizer"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"